debhelper (8.1.1) UNRELEASED; urgency=low

  * dh_strip, dh_makeshlibs: use triplet-objdump, triplet-objcopy and
    triplet-strip from cross-binutils when cross-compiling; closes: #412118.
    (Thanks, Loïc Minier)

 -- Joey Hess <joeyh@debian.org>  Tue, 08 Feb 2011 15:32:35 -0400

debhelper (8.1.0) unstable; urgency=low

  [ Joey Hess ]
  * python_distutils: Pass --force to setup.py build, to ensure that when
    python-dbg is run it does not win and result in scripts having it in
    the shebang line. Closes: #589759
  * Man page fixes about what program -u passes params to. Closes: #593342
  * Avoid open fd 5 or 6 breaking buildsystem test suite. Closes: #596679
  * Large update to Spanish man page translations by Omar Campagne.
    Closes: #600913
  * dh_installdeb: Support debian/package.maintscript files,
    which can contain dpkg-maintscript-helper commands. This can be used
    to automate moving or removing conffiles, or anything added to
    dpkg-maintscript-helper later on. Closes: #574443
    (Thanks, Colin Watson)
  * Massive man page typography patch. Closes: #600883
    (Thanks, David Prévot)
  * Explicitly build-depend on a new enough perl-base. Closes: #601188
  * dh: Inhibit logging when an override target runs the overridden command,
    to avoid unexpected behavior if the command succeeded but the overall
    target fails. Closes: #601037
  * Fix deprecated command list on translated debhelper(7) man pages.
    Closes: #601204
  * dh: Improve filtering in dh_listpackages example. Closes: #604561
  * dh: Add support for build-arch, build-indep, install-arch and
    install-indep sequences. Closes: #604563
    (Thanks, Roger Leigh)
  * dh_listpackages: Do not display warnings if options cause no packages
    to be listed.
  * dh_installdocs: Clarify that debian/README.Debian and debian/TODO are
    only installed into the first package listed in debian/control.
    Closes: #606036